--- a/tutorials/git_riu_tutorial/git_riu_tutorial.Rmd
+++ b/tutorials/git_riu_tutorial/git_riu_tutorial.Rmd
@@ -33,7 +33,7 @@ For this purpose, we need
 - Finally, you have a copy of the original repository: https://github.com/CIP-RIU/st4gi 
 
 
-<!-- ![Fig. 1.1](img/fork.png) -->
+![Fig. 1.1](img/fork.png)
 
 
 ## 3 Update your fork repostiroy
@@ -49,14 +49,14 @@ Note: We asssume that you have al the previous requirements.
 ``` 
 $ git remote -v
 ```
-<!-- ![Caption for the picture.](img/git_remote_v.jpg) -->
+![Caption for the picture.](img/git_remote_v.jpg)
 
 ### 3.2 Upstream
 
 - Secondly, we need the original (origin) repository, so we look for, in this case is https://github.com/reyzaguirre/st4gi. Then go to *clone or download* and then click on the clipboard to copy the https link. 
 
 
-<!-- ![Fig. 1.3](img/git_repo_httpslink.jpg) -->
+![Fig. 1.3](img/git_repo_httpslink.jpg)
 
 The https links is https://github.com/reyzaguirre/st4gi.git. Now go to git console and type:
 
@@ -67,7 +67,7 @@ $ git remote -v
 
 What we basically do here is setting up the origin repository (our copy) and the *upstream* repository, which is the st4gi reyzaguire's repository which has new features that we want to merge in our repository.
 
-<!-- ![Fig. 1.4](img/git_remote_2.jpg) -->
+![Fig. 1.4](img/git_remote_2.jpg)
 
 
 ### 3.3 Fetch and Merge
@@ -77,7 +77,7 @@ To track all the modifcations that upstream repository (st4gi) has, we use the *
 ```
 $ git fetch upstream
 ```
-<!-- ![Fig. 1.5](img/git_fetch.jpg) -->
+![Fig. 1.5](img/git_fetch.jpg)
 
 After tracking new changes from the upstream repository, now we *merge* all of them in our origin repository. In the git console type: 
 
@@ -86,7 +86,7 @@ After tracking new changes from the upstream repository, now we *merge* all of t
 $ git merge upstream/master
 ```
 
-<!-- ![Fig. 1.6](img/git_merge.jpg) -->
+![Fig. 1.6](img/git_merge.jpg)
 
 
 ### 3.4 Push to GitHub
@@ -102,10 +102,16 @@ Thats all!. Now you can go to your GitHub repository and see the new additions.
 
 
 
+### Another example with pepa package (image)
+
+![Fig. 2.0](img/pepa.jpg)
 
 
+#Important links
 
+1.- http://www.dataschool.io/simple-guide-to-forks-in-github-and-git/
 
+2.- https://www.youtube.com/watch?v=-zvHQXnBO6c
 
 
 
